--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+emoji>=0.5.4
 geojson>=2.5.0
+googletrans>=3.0.0
 ipywidgets>=0.5.1
 joblib>=0.14.1
 networkx>=2.2
+nltk>=3.5
 numpy>=1.18.1
 pandas==0.25.3
 plotly>=4.5.4
 pyod>=0.7.7.1
 psutil>=5.5.1
 scipy>=1.4.1
+spacy>=2.3.2
+scikit-learn>=0.23.1
 sqlalchemy>=1.3.15
 statsmodels>=0.9.0
 xlrd>=1.2.0
