--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+dask>=2.23.0
 emoji>=0.5.4
 geojson>=2.5.0
 googletrans>=3.0.0
@@ -6,7 +7,7 @@ joblib>=0.14.1
 networkx>=2.2
 nltk>=3.5
 numpy>=1.18.1
-pandas==0.25.3
+pandas>=1.1.0
 plotly>=4.5.4
 pyod>=0.7.7.1
 psutil>=5.5.1
@@ -15,4 +16,5 @@ spacy>=2.3.2
 scikit-learn>=0.23.1
 sqlalchemy>=1.3.15
 statsmodels>=0.9.0
+wheel>=0.35.1
 xlrd>=1.2.0
