--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-dask>=2.23.0
-fsspec>=0.8.0
-geojson>=2.5.0
-google-cloud-storage>=1.36.1
-ipywidgets>=0.5.1
-joblib>=0.14.1
-networkx>=2.2
-numpy>=1.18.1
-pandas>=1.1.1
-plotly>=4.5.4
-pyarrow>=2.0.0
-pyod>=0.7.7.1
-scipy>=1.4.1
-scikit-learn>=0.23.1
-sqlalchemy>=1.3.15
-statsmodels>=0.9.0
-toolz>=0.10.0
+dask==2020.12.0
+fsspec==0.8.5
+geojson==2.5.0
+google-cloud-storage==1.36.1
+ipywidgets==7.5.1
+joblib==0.14.1
+networkx==2.5
+numpy==1.19.2
+pandas==1.1.4
+plotly==4.11.0
+pyarrow==2.0.0
+pyod==0.8.2
+scipy==1.5.2
+scikit-learn==0.23.2
+sqlalchemy==1.3.19
+statsmodels==0.12.0
+toolz==0.11.1
 wheel>=0.35.1
-xlrd>=1.2.0
+xlrd==1.2.0
