--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ geojson==2.5.0
 google-cloud-storage==1.36.1
 ipywidgets==7.5.1
 joblib==0.14.1
+kaleido==0.2.1
 networkx==2.5
 numpy==1.21.0
 pandas==1.2.0
