--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,11 @@ pyarrow==2.0.0
 pyLDAvis==3.3.1
 pyod==0.8.2
 s3fs==0.4.0
+scikit-image==0.19.2
 scipy==1.5.2
 scikit-learn==0.23.2
 sqlalchemy==1.3.19
 statsmodels==0.12.0
 toolz==0.11.1
-wheel>=0.35.1
+wheel==0.35.1
 xlrd==1.2.0
